# embxx_on_rpi

./: .gitmodules  CMakeLists.txt  README
cmake/: toolchain_handling.cmake
src/: CMakeLists.txt  README  raspberrypi.ld
src/app/: CMakeLists.txt  README
src/app/01_led_flash/: CMakeLists.txt  System.cpp  System.h  main.cpp
src/app/02_uart1_echo/: CMakeLists.txt  System.cpp  System.h  main.cpp
src/app/03_button/: CMakeLists.txt  System.cpp  System.h  main.cpp
src/app/04_uart1_logging/: CMakeLists.txt  System.h  main.cpp
src/app/05_uart1_comms/: CMakeLists.txt  Session.cpp  Session.h  System.cpp  System.h  main.cpp
src/app/05_uart1_comms/message/: ButtonStateChangeMsg.h  HeartbeatMsg.h  LedStateChangeMsg.h  LedStateCtrlMsg.h  MsgId.h
src/app/06_i2c0_eeprom/: CMakeLists.txt  System.cpp  System.h  main.cpp
src/app/07_spi0_flash/: CMakeLists.txt  System.cpp  System.h  main.cpp
src/app/app_button/: CMakeLists.txt  System.cpp  System.h  main.cpp
src/app/app_i2c0_eeprom/: CMakeLists.txt  System.h  main.cpp
src/app/app_led_flash/: CMakeLists.txt  main.cpp
src/app/app_spi0_flash/: CMakeLists.txt  System.cpp
src/app/app_uart1_comms/: AllMsgsDefs.h  CMakeLists.txt  System.h
src/app/app_uart1_comms/message/: LedState.h
src/app/app_uart1_echo/: CMakeLists.txt
src/app/app_uart1_logging/: CMakeLists.txt  System.cpp  System.h  main.cpp
src/app/app_uart1_morse/: CMakeLists.txt  Morse.h  System.cpp  System.h  main.cpp
src/app/led_flash/: CMakeLists.txt  System.cpp  System.h  main.cpp
src/app/led_timed_flash/: CMakeLists.txt  System.cpp  System.h  main.cpp
src/app/uart1_echo/: CMakeLists.txt  System.cpp  System.h  main.cpp
src/asm/: CMakeLists.txt  startup.s
src/common/: stdlib_stub.cpp
src/component/: Button.h  Eeprom.h  Led.h  OnBoardLed.h
src/device/: CMakeLists.txt  EventLoopDevices.h  Function.cpp  Function.h  Gpio.cpp  Gpio.h  I2C0.h  InterruptMgr.h  Led.cpp  Led.h  Spi0.h  Timer.h  Uart1.h
src/stdlib/: CMakeLists.txt  placeholders.cpp  stdlib_stub.cpp  string.cpp
src/test_cpp/: CMakeLists.txt  README
src/test_cpp/01_test_simple/: CMakeLists.txt  stub.cpp
src/test_cpp/02_test_vector/: CMakeLists.txt  main.cpp  stub.cpp
src/test_cpp/03_test_statics/: CMakeLists.txt  SomeObj.h  stub.cpp
src/test_cpp/04_test_abstract_class/: AbstractBase.cpp  AbstractBase.h  CMakeLists.txt  Derived.h  stub.cpp
src/test_cpp/05_test_templates/: CMakeLists.txt
src/test_cpp/test_cpp_abstract_class/: CMakeLists.txt  Derived.cpp  main.cpp
src/test_cpp/test_cpp_exceptions/: CMakeLists.txt  main.cpp  stub.cpp
src/test_cpp/test_cpp_rtti/: CMakeLists.txt  SomeClass.cpp  SomeClass.h  main.cpp  stub.cpp
src/test_cpp/test_cpp_simple/: CMakeLists.txt  main.cpp
src/test_cpp/test_cpp_statics/: CMakeLists.txt  SomeObj.cpp  SomeObj2.cpp  main.cpp
src/test_cpp/test_cpp_tag_dispatch/: CMakeLists.txt  main.cpp  tag.cpp  tag.h
src/test_cpp/test_cpp_templates/: CMakeLists.txt  main.cpp  other.cpp  template.h
src/test_cpp/test_cpp_vector/: CMakeLists.txt  heap.cpp  stub.cpp
